@@ -1,4 +1,5 @@
 v0.14
+    * ADD : WMS Editor: Display user-friendly layers/projection list based on capabilities
     * ADD : Display plain trackpoint description/comment in infodock if found (closes #1788)
 	* FIX : First node of a new way not connected to existing way after upload (fixes #1774; fixes #1780)
 	* CHG : Changed way to handle WMS. Should allow exotic projections and eliminate problems.
